# sauron

./: .gitignore  CONTRIBUTING.md  PLAN.md  predict.py  pyproject.toml  train.py
configs/: default.yaml
data/: sector_etf_baskets.yaml
sauron/: __init__.py  sectors.py
sauron/data/: __init__.py  fetch.py  labels.py  pipeline.py
sauron/data/sources/: __init__.py  eia.py  fred.py  gdelt.py  huggingface.py  sipri.py  worldbank.py  yfinance_labels.py
sauron/inference/: __init__.py  predict.py
sauron/model/: __init__.py  attribution.py  backbone.py  ensemble.py  event_encoder.py  heads.py  losses.py  sauron_model.py  scenario_engine.py  sector_graph.py
sauron/training/: __init__.py  config.py  evaluate.py  trainer.py
tests/: test_data_sources.py  test_huggingface.py  test_model.py  test_sectors.py
